add_subdirectory(FieldToLines)
#add_subdirectory(FLE)
#add_subdirectory(FlowTopo)
#add_subdirectory(RidgeSurface)
add_subdirectory(Statistics)
add_subdirectory(VortexCores)
add_subdirectory(VortexCriteria)
#add_subdirectory(WriteUnstructured)
##ADD_SUBDIRECTORY(DumpCFX)
#add_subdirectory(WriteDump)
#add_subdirectory(ReadUnstructured)
#add_subdirectory(VorticityTransport)
